# public/docs/openapi.yaml
@@ -82,24 +82,40 @@ paths:
                       updated_at:
                         type: string
                         example: '2021-06-27T17:09:32.000000Z'
+        400:
+          description: ''
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: "{\n\"status\": \"error\",\n\"message\": \"Validation error\",\n\"data\": {\n\"agent_id\": [\n\"The agent id field is required.\"\n],\n\"first_name\": [\n\"The first name field is required.\"\n]\n}"
         404:
           description: ''
           content:
-            application/json:
+            text/plain:
               schema:
-                type: object
-                example:
-                  status: error
-                  message: 'Agent not found'
-                properties:
-                  status:
-                    type: string
-                    example: error
-                  message:
-                    type: string
-                    example: 'Agent not found'
+                type: string
+                example: '{'
       tags:
         - 'Agent management'
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                agent_id:
+                  type: string
+                  description: ''
+                  example: velit
+                first_name:
+                  type: string
+                  description: ''
+                  example: pariatur
+              required:
+                - agent_id
+                - first_name
       security: []
     parameters:
       -
@@ -534,7 +550,7 @@ paths:
                 email:
                   type: string
                   description: 'The email of the agent. Example:'
-                  example: aboehm@example.com
+                  example: jboehm@example.com
                 phone_number:
                   type: string
                   description: 'The phone number of the agent.'
@@ -546,7 +562,7 @@ paths:
                 gender:
                   type: string
                   description: ''
-                  example: atque
+                  example: beatae
                 residence:
                   type: string
                   description: 'The residence of the agent.'
@@ -566,11 +582,11 @@ paths:
                 created_by:
                   type: integer
                   description: ''
-                  example: 12
+                  example: 19
                 fpo_id:
                   type: integer
                   description: ''
-                  example: 1
+                  example: 7
               required:
                 - first_name
                 - last_name
@@ -697,7 +713,7 @@ paths:
         in: path
         name: id
         description: 'The ID of the agent.'
-        example: explicabo
+        example: quia
         required: true
         schema:
           type: string
@@ -951,7 +967,7 @@ paths:
                 email:
                   type: string
                   description: 'The email of the agent. Example:'
-                  example: rafaela.bernier@example.com
+                  example: fay06@example.net
                 phone_number:
                   type: string
                   description: 'The phone number of the agent.'
@@ -1137,11 +1153,11 @@ paths:
                 email:
                   type: string
                   description: 'The email address or phone number of the user'
-                  example: sauer.gilda@example.com
+                  example: wsatterfield@example.org
                 password:
                   type: string
                   description: 'The password of the user'
-                  example: 'Vz0$W1G)QjP{|l'
+                  example: 'EC0lSOS#B38lc|MVc'
               required:
                 - email
                 - password
@@ -1766,51 +1782,51 @@ paths:
                 fpo_name:
                   type: string
                   description: 'The name of the FPO.'
-                  example: quos
+                  example: fugiat
                 district:
                   type: string
                   description: 'The district of the FPO.'
-                  example: aut
+                  example: ad
                 county:
                   type: string
                   description: 'The county of the FPO.'
-                  example: amet
+                  example: aperiam
                 sub_county:
                   type: string
                   description: 'The sub county of the FPO.'
-                  example: ea
+                  example: tempore
                 parish:
                   type: string
                   description: 'The parish of the FPO.'
-                  example: eligendi
+                  example: vel
                 village:
                   type: string
                   description: 'The village of the FPO.'
-                  example: dolor
+                  example: et
                 main_crop:
                   type: string
                   description: 'The main crop of the FPO.'
-                  example: omnis
+                  example: voluptates
                 fpo_member_count:
                   type: integer
                   description: 'The number of FPO members.'
-                  example: 4
+                  example: 15
                 fpo_contact_name:
                   type: string
                   description: 'The contact name of the FPO.'
-                  example: et
+                  example: voluptatem
                 contact_phone_number:
                   type: string
                   description: 'The contact phone number of the FPO.'
-                  example: vitae
+                  example: rem
                 address:
                   type: string
                   description: ''
-                  example: eligendi
+                  example: eos
                 created_by:
                   type: integer
                   description: 'The userId  of the FPO creator.'
-                  example: 13
+                  example: 19
               required:
                 - fpo_name
                 - district
@@ -1961,7 +1977,7 @@ paths:
         in: path
         name: id
         description: 'The id of the FPO.'
-        example: molestiae
+        example: iure
         required: true
         schema:
           type: string
@@ -2114,47 +2130,47 @@ paths:
                 fpo_name:
                   type: string
                   description: 'The name of the FPO.'
-                  example: quo
+                  example: et
                 district:
                   type: string
                   description: 'The district of the FPO.'
-                  example: qui
+                  example: provident
                 county:
                   type: string
                   description: 'The county of the FPO.'
-                  example: sunt
+                  example: omnis
                 sub_county:
                   type: string
                   description: 'The sub county of the FPO.'
-                  example: ab
+                  example: id
                 parish:
                   type: string
                   description: 'The parish of the FPO.'
-                  example: quis
+                  example: aspernatur
                 village:
                   type: string
                   description: 'The village of the FPO.'
-                  example: odit
+                  example: aliquid
                 main_crop:
                   type: string
                   description: 'The main crop of the FPO.'
-                  example: commodi
+                  example: incidunt
                 fpo_member_count:
                   type: integer
                   description: 'The number of FPO members.'
-                  example: 12
+                  example: 11
                 fpo_contact_name:
                   type: string
                   description: 'The contact name of the FPO.'
-                  example: ullam
+                  example: unde
                 contact_phone_number:
                   type: string
                   description: 'The contact phone number of the FPO.'
-                  example: est
+                  example: cumque
                 created_by:
                   type: integer
                   description: 'The userId  of the FPO creator.'
-                  example: 17
+                  example: 4
               required:
                 - fpo_name
                 - district
@@ -2172,7 +2188,7 @@ paths:
         in: path
         name: id
         description: 'The id of the FPO.'
-        example: qui
+        example: accusantium
         required: true
         schema:
           type: string
@@ -2385,7 +2401,7 @@ paths:
         in: path
         name: id
         description: 'The id of the FPO.'
-        example: quidem
+        example: facilis
         required: true
         schema:
           type: string
@@ -2566,7 +2582,7 @@ paths:
                 gender:
                   type: string
                   description: 'Farmer gender. Example Male/Female'
-                  example: incidunt
+                  example: sed
                 education_level:
                   type: string
                   description: 'The education level of the farmer.'
